syntax = "proto3";

package com.adrmanagement.common.infrastructure.grpcservice;

message GenericResponse {
  int32 status = 1;
  string message = 2;
}
